2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/secur32/lsa.c: Add @implemented and @unimplemented to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/storage/scsiport/scsiport.c: Add @implemented and
	@unimplemented to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/ndis/ndis/40gone.c: Add @implemented and @unimplemented
	to APIs.
	* drivers/net/ndis/ndis/50gone.c: Ditto.
	* drivers/net/ndis/ndis/buffer.c: Ditto.
	* drivers/net/ndis/ndis/cl.c: Ditto.
	* drivers/net/ndis/ndis/cm.c: Ditto.
	* drivers/net/ndis/ndis/co.c: Ditto.
	* drivers/net/ndis/ndis/control.c: Ditto.
	* drivers/net/ndis/ndis/hardware.c: Ditto.
	* drivers/net/ndis/ndis/io.c: Ditto.
	* drivers/net/ndis/ndis/memory.c: Ditto.
	* drivers/net/ndis/ndis/miniport.c: Ditto.
	* drivers/net/ndis/ndis/protocol.c: Ditto.
	* drivers/net/ndis/ndis/string.c: Ditto.
	* drivers/net/ndis/ndis/stubs.c: Ditto.
	* drivers/net/ndis/ndis/time.c: Ditto.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/kernel32/debug/break.c: Add @implemented and @unimplemented
	to APIs.
	* lib/kernel32/debug/debugger.c: Ditto.
	* lib/kernel32/debug/output.c: Ditto.
	* lib/kernel32/except/except.c: Ditto.
	* lib/kernel32/file/backup.c: Ditto.
	* lib/kernel32/file/cnotify.c: Ditto.
	* lib/kernel32/file/copy.c: Ditto.
	* lib/kernel32/file/create.c: Ditto.
	* lib/kernel32/file/curdir.c: Ditto.
	* lib/kernel32/file/delete.c: Ditto.
	* lib/kernel32/file/deviceio.c: Ditto.
	* lib/kernel32/file/dir.c: Ditto.
	* lib/kernel32/file/dosdev.c: Ditto.
	* lib/kernel32/file/file.c: Ditto.
	* lib/kernel32/file/find.c: Ditto.
	* lib/kernel32/file/iocompl.c: Ditto.
	* lib/kernel32/file/lfile.c: Ditto.
	* lib/kernel32/file/lock.c: Ditto.
	* lib/kernel32/file/mailslot.c: Ditto.
	* lib/kernel32/file/move.c: Ditto.
	* lib/kernel32/file/npipe.c: Ditto.
	* lib/kernel32/file/pipe.c: Ditto.
	* lib/kernel32/file/rw.c: Ditto.